--- a/templates/prices.html
+++ b/templates/prices.html
@@ -24,9 +24,9 @@
 
             <main class="hero-section">
                 <h1 class="digital-title">
-                    <span class="title-line">Прозрачные</span>
-                    <span class="title-line accent">цены</span>
-                    <span class="title-line">и пакеты услуг</span>
+                    <span class="title-line accent">Прозрачные цены</span>
+                    
+                    
                 </h1>
                 
                 <div class="pricing-container">
