--- a/templates/projects.html
+++ b/templates/projects.html
@@ -29,8 +29,8 @@
             <main class="hero-section">
                 <div class="hero-content">
                     <h1 class="digital-title">
-                        <span class="title-line">Наши</span>
-                        <span class="title-line accent">проекты</span>
+                        <span class="title-line accent">Наши проекты</span>
+                        
                     </h1>
                     <p class="digital-subtitle">
                         Реализованные решения, которые меняют digital-ландшафт
