--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -24,9 +24,9 @@
 
             <main class="hero-section">
                 <h1 class="digital-title">
-                    <span class="title-line">Отзывы</span>
-                    <span class="title-line accent">наших</span>
-                    <span class="title-line">клиентов</span>
+                    <span class="title-line accent">Отзывы наших клиентов</span>
+                    
+                    
                 </h1>
                 
                 <div class="reviews-container">
