--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
         <!-- Статичное меню -->
         <header class="digital-header">
             <div class="logo" onclick="animateLogo()">
-                { DEV }
+                Петров Руслан
             </div>
             <nav class="digital-nav">
                 <a href="{{ url_for('index') }}" class="nav-link active">Главная</a>
