Замена { DEV } на 'Петров Руслан' в шапках всех страниц

--- a/templates/about.html
+++ b/templates/about.html
@@ -15,7 +15,7 @@
     <div class="digital-universe">
         <header class="digital-header">
             <div class="logo" onclick="animateLogo()">
-                { DEV }
+                Петров Руслан
             </div>
             <nav class="digital-nav">
                 <a href="{{ url_for('index') }}" class="nav-link">Главная</a>
